Replace yandex cloud api to uploadthingapi, rewrite api requests, add dotenvplugin for webpack. Theory is finished, but have some details to fix.

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -23,6 +23,7 @@
   --z-index-hidden: -1;
   --z-index-default: 0;
   --z-index-one: 1;
+  --z-index-sidebar: 3;
 
   // Heights
   --header-height: 30px;
